--- a/.todo.md
+++ b/.todo.md
@@ -1,1 +1,9 @@
-- [ ] Add Support to ABNT2- [ ] support complex terminal interactions
+# Todo
+
+A basic todo markdown file
+
+- [x] create a file
+
+todo-cli: https://www.npmjs.com/package/@cicolas/todo-cli
+- [ ] Add ABNT2 Support
+- [ ] Enable complex interactions with the ssh session
