Add command MCP

--- a/.todo.md
+++ b/.todo.md
@@ -7,3 +7,6 @@ A basic todo markdown file
 todo-cli: https://www.npmjs.com/package/@cicolas/todo-cli
 - [ ] Add ABNT2 Support
 - [ ] Enable complex interactions with the ssh session
+- [ ] add sudo MCP
+- [ ] add multiple connections at the same time
+- [ ] add connectionss MCP -> list, sendcommand
